<?xml version="1.0"?>
<package>
  <name>asr_calibration_tool_dome</name>
  <version>1.0.0</version>
  <description>This package provides a tool for calibraiting the kinematic chain of the PdB-Dome. It provides a data-tracking for recording 6D positions of Flock of Birds data glove and a checkerboard mounted on it. With this construction, the kinematic chain is closed. The recorded data is written to a file and can be used for the asr_kinematic_chain_optimizer.</description>
  <author>Heller Florian, Stöckle Patrick, Wittenbeck Valerij</author>
  <maintainer email="asr-ros@lists.kit.edu">Meißner Pascal</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/asr_calibration_tool_dome</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>asr_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>checkerboard_detector</build_depend>


  <run_depend>asr_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>checkerboard_detector</run_depend>

</package>
